--- a/user-facing/package.json
+++ b/user-facing/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-table": "^7.7.1",
     "mongodb": "^3.6.9",
     "mongodb-client-encryption": "^1.2.5",
     "react": "^17.0.2",
