--- a/user-facing/package.json
+++ b/user-facing/package.json
@@ -17,6 +17,7 @@
     "@types/react-table": "^7.7.1",
     "mongodb": "^3.6.9",
     "mongodb-client-encryption": "^1.2.5",
+    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
